@@ -16,6 +16,8 @@
 - added: `nosql.upsert(doc)` inserts a new document where document doesn't exist in DB
 - added: `NOSQLMEMORY(dbName, [viewName])` enables in-memory database collection
 - added: `nosql.join(field, dbName, [view])` returns `DatabaseBuilder` with updated `.where(field_JoinedDB, field_currentdb)` method (it supports `.fields()` too)
+- added: `nosql.join()` supports scalar operation too, e.g. `nosql.join(...).scalar('count')`
+- added: `nosql.scalar(type, [field])` - types: `sum`, `min`, `max`, `avg` and `count`
 
 - updated: `F.on('exit', function(signal) {})` added a signal code
 - updated: SchemaBuilderEntity contains new argument `controller`, e.g. `.setSave(function(error, model, options, callback, controller) { ..`
